; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_tcs34725.c_tcs34725SetIntegrationTime.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_tcs34725.c_tcs34725SetIntegrationTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_tcs34725Initialised = common dso_local global i32 0, align 4
@TCS34725_ATIME = common dso_local global i32 0, align 4
@_tcs34725IntegrationTime = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tcs34725SetIntegrationTime(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* @_tcs34725Initialised, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %2
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @tcs34725Setup(i32* %8)
  br label %10

10:                                               ; preds = %7, %2
  %11 = load i32, i32* @TCS34725_ATIME, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @tcs34725Write8(i32 %11, i32 %12)
  %14 = load i32, i32* %3, align 4
  store i32 %14, i32* @_tcs34725IntegrationTime, align 4
  ret i32 0
}

declare dso_local i32 @tcs34725Setup(i32*) #1

declare dso_local i32 @tcs34725Write8(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
